:bug: fixed image downloading cropped version

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: purple;
+}
+
 form {
     width: 30%;
     margin: 2rem auto;
@@ -17,8 +21,10 @@ label {
 }
 
 h1 {
+    font-size: 5rem;
     font-family: sans-serif;
     color: white;
+    overflow: hidden;
 }
 
 input {
@@ -53,6 +59,10 @@ input {
         0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black,
         0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black,
         0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black; /* Hack to make outline on text */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .output h1:nth-child(1) {
@@ -94,8 +104,8 @@ label:hover {
 }
 
 img {
-    max-height: 800px;
-    max-width: 800px;
+    min-height: 800px;
+    min-width: 800px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
